tests/invalid/resolver/unknown_symbol.ri
enum MyEnum {
    Musk
}

fn main() {
    unknown_fn();
    let x = UnknownStruct{};
    let z = unknown_var;
    _ = MyEnum::Mark;
}
